--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <p><a href="second.html">A link to the second page</a></p>
+<p><a href="first.php">A link to a php page</a></p>
 </body>
 </html>
