--- a/second.html
+++ b/second.html
@@ -1,5 +1,9 @@
 <html>
 	<body>
 		<p>This is the second page</p>
+		<button type="button" onclick="document.getElementById('demo').innerHTML = Date()">
+		Click me to display Date and Time.</button>
+
+		<p id="demo"></p>
 	</body>
 </html>
