--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<p><a href="second.html">A link to the second page</a></p>
+<p>This repository is still being updated. Links to other work is below</p>
+<p><a href="/MandelbrotSet/">The Mandelbrot Set written in Javascript</a></p>
 <p><a href="/IRC_Client/">IRC_CLIENT</a></p>
 </body>
 </html>
